data/derived/sp14/progs/unify/prog3140.ml.out
Characters 29-36:
  wwhile ((not f) b,b);;
          ^^^^^^^
Error: This expression has type bool
       This is not a function; it cannot be applied.
